i18n/zh-Hans/docusaurus-plugin-content-docs/version-3.0.0/ambari-design/index.md
---
title: Ambari 设计
---

<!-- Licensed to the Apache Software Foundation (ASF) under one or more contributor license agreements. See the NOTICE file distributed with this work for additional information regarding copyright ownership. The ASF licenses this file to You under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0. Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License. -->

# Ambari 设计 {#ambari-design}

Ambari 架构：https://issues.apache.org/jira/secure/attachment/12559939/Ambari_Architecture.pdf

Ambari Server-Agent 注册流程：http://www.slideshare.net/hortonworks/ambari-agentregistrationflow-17041261

Ambari 本地仓库设置：http://www.slideshare.net/hortonworks/ambari-using-a-local-repository

API 文档：https://github.com/apache/ambari/blob/trunk/ambari-server/docs/api/v1/index.md

技术栈：[技术栈](./technology-stack.md)

集成：http://developer.teradata.com/viewpoint/articles/viewpoint-integration-with-apache-ambari-for-hadoop-monitoring

```mdx-code-block
import DocCardList from '@theme/DocCardList';

<DocCardList />
```
